--- a/wedプログラミング/第13回/saisyukadai/style.css
+++ b/wedプログラミング/第13回/saisyukadai/style.css
@@ -1,5 +1,39 @@
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    flex-direction: column;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
 textarea {
-    width: 250px;
-    height: 150px;
-    font-size: 20px;
+    width: 300px;
+    height: 100px;
+    background-color: lightgray;
+}
+
+button {
+    width: 100px;
+    height: 40px;
+    background-color: lightblue;
+}
+
+#selectSource {
+    position: relative;
+    top: 10;
+    right: 285;
+}
+
+#selectLanguage {
+    position: relative;
+    top: 10;
+    left: 45; 
 }
