--- a/wedプログラミング/第13回/saisyukadai/style.css
+++ b/wedプログラミング/第13回/saisyukadai/style.css
@@ -1,3 +1,7 @@
+* {
+    background-color: rgb(12, 172, 184);
+}
+
 body {
     display: flex;
     justify-content: center;
@@ -17,7 +21,7 @@ body {
 textarea {
     width: 300px;
     height: 100px;
-    background-color: lightgray;
+    background-color: rgba(101, 252, 1, 0.664);
 }
 
 button {
@@ -30,10 +34,12 @@ button {
     position: relative;
     top: 10;
     right: 285;
+    background-color: white;
 }
 
 #selectLanguage {
     position: relative;
     top: 10;
-    left: 45; 
+    left: 45;
+    background-color: white;
 }
