submit: kadai files

--- a/webプログラミング実践/第11回/kadai/style.css
+++ b/webプログラミング実践/第11回/kadai/style.css
@@ -1,3 +1,10 @@
 * {
     background-color: lightgray;
 }
+th {
+    background-color: orange;
+}
+td {
+    text-align: center;
+    background-color: rgb(255, 190, 164);
+}
